fix code snippet width and set overflow to auto to enable a scroll bar on overflow

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -6,3 +6,9 @@
 .site-nav-left {
     margin-left: 10px;
 }
+
+div.highlighter-rouge {
+    width: 100%;
+    scroll-behavior: smooth;
+    overflow-x: auto;
+}
